--- a/app/src/main/res/layout/activity_main_grafika.xml
+++ b/app/src/main/res/layout/activity_main_grafika.xml
@@ -8,12 +8,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.learn.test.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/sample_text"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:fadeScrollbars="false" >
+    </ListView>
+
 </RelativeLayout>
